<resources>
    <string name="app_name">My Application19</string>
    <string name="update">Update</string>
    <string name="course">Course</string>
    <string name="add_course">Add Course</string>
    <string name="admin_set_courses">Admin Set Courses</string>
    <string name="delete">Delete</string>

    <string-array name="start_col">
        <item>Start</item>
        <item>30/06/21</item>
        <item>30/06/21</item>
        <item>30/06/21</item>
        <item>30/06/21</item>
        <item>30/06/21</item>
        <item>30/06/21</item>
        <item>30/06/21</item>
        <item>30/06/21</item>
        <item>30/06/21</item>
        <item>30/06/21</item>
        <item>30/06/21</item>
        <item>30/06/21</item>
    </string-array>

    <string-array name="category_col">
        <item>Category</item>
        <item>Animal</item>
        <item>Arts</item>
        <item>Spaces</item>
        <item>Animal</item>
        <item>Arts</item>
        <item>Spaces</item>
        <item>Animal</item>
        <item>Arts</item>
        <item>Spaces</item>
        <item>Animal</item>
        <item>Arts</item>
        <item>Spaces</item>
    </string-array>

    <string-array name="course_col">
        <item>Course</item>
        <item>earth</item>
        <item>dog</item>
        <item>painting</item>
        <item>earth</item>
        <item>dog</item>
        <item>painting</item>
        <item>earth</item>
        <item>dog</item>
        <item>painting</item>
        <item>earth</item>
        <item>dog</item>
        <item>painting</item>
    </string-array>
    <string name="title_activity_leaders">Leaders</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>